--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,10 @@
 {
-    "emmet.excludeLanguages": [
-    
-        "markdown"
-    ],
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact"
-    },
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+	"emmet.excludeLanguages": ["markdown"],
+	"emmet.includeLanguages": {
+		"javascript": "javascriptreact"
+	},
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
-	"prettier.useTabs": true,
-	"prettier.tabWidth": 4
+	"prettier.useTabs": false,
+	"prettier.tabWidth": 2
 }
